--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,34 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>2.19.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-slf4j-impl</artifactId>
+                <version>2.19.0</version>
+            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>org.jboss.weld.se</groupId>-->
+<!--                <artifactId>weld-se-core</artifactId>-->
+<!--                <version>5.1.0.Final</version>-->
+<!--            </dependency>-->
+	        <dependency>
+	            <groupId>org.jboss.weld.se</groupId>
+	            <artifactId>weld-se-shaded</artifactId>
+	            <version>5.1.0.Final</version>
+	        </dependency>
+
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.18.24</version>
+                <scope>provided</scope>
+            </dependency>
+
+            <dependency>
                 <groupId>org.junit.jupiter</groupId>
                 <artifactId>junit-jupiter</artifactId>
                 <version>5.9.0</version>
@@ -32,27 +60,6 @@
                 <artifactId>hamcrest</artifactId>
                 <version>2.2</version>
                 <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok</artifactId>
-                <version>1.18.24</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.logging.log4j</groupId>
-                <artifactId>log4j-api</artifactId>
-                <version>2.19.0</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.logging.log4j</groupId>
-                <artifactId>log4j-slf4j-impl</artifactId>
-                <version>2.19.0</version>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.weld.se</groupId>
-                <artifactId>weld-se-core</artifactId>
-                <version>5.1.0.Final</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
