--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 	<groupId>r-uu</groupId>
-    <artifactId>r-uu.sandbox.jpms-cdi.weld</artifactId>
+    <artifactId>r-uu.sandbox-jpms-cdi.weld</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
@@ -41,7 +41,6 @@
 	            <artifactId>weld-se-shaded</artifactId>
 	            <version>5.1.0.Final</version>
 	        </dependency>
-
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
