--- a/common/pom.xml
+++ b/common/pom.xml
@@ -4,13 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>r-uu.sandbox.jpms-cdi.weld-common</artifactId>
+    <artifactId>r-uu.sandbox-jpms-cdi.weld-common</artifactId>
 
-		<parent>
-			<groupId>r-uu</groupId>
-			<artifactId>r-uu.sandbox.jpms-cdi.weld</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</parent>
+	<parent>
+		<groupId>r-uu</groupId>
+		<artifactId>r-uu.sandbox-jpms-cdi.weld</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
 
     <dependencies>
         <dependency>
